--- a/css/style.css
+++ b/css/style.css
@@ -107,6 +107,57 @@ button a.arrow {
 button a.arrow.next {
   padding-left: 10px;
 }
+
+.bx-wrapper{
+  border: none !important;
+  box-shadow: none !important;
+}
+.bx-controls{
+  text-align: right;
+}
+.bx-controls-direction{
+  padding-top: 50px;
+}
+
+.bx-prev,
+.bx-next{
+  position: relative !important;
+  text-decoration: none;
+  background: #f5f5f5;
+  color: #000;
+  width: 50px;
+  height: 50px;
+  line-height: 50px;
+  border-radius: 50%;
+  border: 0;
+  text-align: center;
+  vertical-align: middle;
+  overflow: hidden;
+  transition: .4s;
+  font-size: 18px;
+  font-family: "ヒラギノ角ゴ ProN W3", "Hiragino Kaku Gothic ProN", sans-serif;
+  margin-left: 40px;
+  display: inline-block;
+}
+.list .works-list .slick-prev{
+  position: absolute;
+  bottom: 0;
+  right: 100px;
+}
+
+.list .works-list .back-btn {
+  position: absolute;
+  bottom: 0;
+  right: 10ex;
+  z-index: 2;
+}
+.list .works-list .next-btn {
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  }
+
+
 /*====================common ---- SP===================== */
 @media (max-width: 1160px) {
   .content{
@@ -122,10 +173,21 @@ button a.arrow.next {
   #particles-js{
     height: 250px !important;
   }
-  .arrow_box {
+  .arrow_box,
+  .bx-controls {
     text-align: center;
   }
-  button {
+  .list .works-list .back-btn {
+    right: 42%;
+    margin-right: 55px;
+  
+  }
+  .list .works-list .next-btn{
+    right: 38%;
+  }
+  button,
+  .bx-prev,
+  .bx-next {
     width: 30px;
     height: 30px;
     line-height: 30px;
@@ -661,7 +723,9 @@ margin-bottom: 100px;
   width: 100%;
   margin-bottom: 170px;
 }
-
+.works-list{
+  padding-bottom: 50px;
+}
 
 
 
