--- a/css/style.css
+++ b/css/style.css
@@ -145,12 +145,14 @@ button a.arrow.next {
   right: 100px;
 }
 
+.list .news-list .back-btn,
 .list .works-list .back-btn {
   position: absolute;
   bottom: 0;
   right: 10ex;
   z-index: 2;
 }
+.list .news-list .next-btn,
 .list .works-list .next-btn {
   position: absolute;
   right: 0;
@@ -177,12 +179,14 @@ button a.arrow.next {
   .bx-controls {
     text-align: center;
   }
+  .list .news-list .back-btn,
   .list .works-list .back-btn {
     right: 42%;
     margin-right: 55px;
   
   }
-  .list .works-list .next-btn{
+  .list .news-list .next-btn, 
+  .list .works-list .next-btn {
     right: 38%;
   }
   button,
@@ -673,12 +677,14 @@ margin-bottom: 100px;
 .list ul {
   overflow: hidden;
 }
+/*
 .list ul li.list_dtl {
   float: left;
   width: 32%;
   margin-right: 2%;
   margin-bottom: 70px;
 }
+*/
 .list ul li.list_dtl:nth-child(3n) {
   margin-right: 0;
 }
@@ -723,6 +729,7 @@ margin-bottom: 100px;
   width: 100%;
   margin-bottom: 170px;
 }
+.news-list,
 .works-list{
   padding-bottom: 50px;
 }
@@ -796,17 +803,20 @@ margin-bottom: 100px;
   .list {
     margin: 0 10px 50px;
   }
+  
   .list ul li.list_dtl {
     width: 48%;
-    margin-right: 4%;
+    /*margin-right: 4%;*/
     margin-bottom: 30px;
   }
+  /*
   .list ul li.list_dtl:nth-child(3n) {
     margin-right: 4%;
   }
   .list ul li.list_dtl:nth-child(2n) {
     margin-right: 0;
   }
+  */
   .list ul li.list_dtl p {
     font-size: 8px;
   }
