--- a/css/style.css
+++ b/css/style.css
@@ -426,7 +426,7 @@ nav#fh5co-main-nav{
     text-align: left;
     margin: 0;
     position: relative;
-    top: 10%;
+    top: 15%;
     left: 7%;
   }
   #fh5co-main-nav ul li {
@@ -442,9 +442,9 @@ nav#fh5co-main-nav{
     width: auto;
     height: 60px;
     /* transform: translate(10%,-100%); */
-    position: relative;
-    top: 25px;
-    left: -110px;
+    position: absolute;
+    top: 3%;
+    left: 7%;
   }
   #fh5co-main-nav ul li.consept_h{
     width: 100%;
